fixing size and spacing between items

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,13 +6,39 @@ body {
   padding: 0 1.5rem 0 0;
 }
 
+.react-multi-carousel-list {
+  margin: 0 1rem;
+}
+
 .react-multi-carousel-track {
   /* gap: 10px; */
 }
 
 .react-multi-carousel-item {
   padding: 0;
+  margin: 0 2rem;
 }
+
+/* @media screen and (min-width: 600px)  {
+  .react-multi-carousel-item {
+    margin-left: 2rem;
+  }
+
+  .react-multi-carousel-list {
+  margin: 0 13rem;
+}
+} */
+
+/* @media screen and (min-width: 1024px)  {
+
+  .react-multi-carousel-item {
+    margin: 1rem;
+  }
+
+  .react-multi-carousel-list {
+  margin: 0 2.5rem;
+}
+} */
 
 .react-multiple-carousel__arrow {
   background-color: black;
